# poisson-love

./: .pre-commit-config.yaml  BLOG.md  README.md  README_zh.md  build_and_publish.py  dashboard.py  demo_data_generator.py  pyproject.toml
examples/: bayesian_demo.py  bayesian_learning_demo.py  full_pipeline_demo.py  info_gain_demo.py  integration_example.py  optimal_stop_demo.py  pid_demo.py  pid_poisson_demo.py  preference_demo.py  quickstart.py  quickstart_unified.py  telegram_bot.py
src/poisson_love/: __init__.py  love.py
src/poisson_love/control/: __init__.py
src/poisson_love/info_gain/: __init__.py  core.py
src/revive_my_lover/: __init__.py  love.py  runner.py
src/revive_my_lover/adapters/: __init__.py  anthropic.py  base.py  generic.py  openai.py
src/revive_my_lover/bayesian/: __init__.py  learner.py
src/revive_my_lover/control/: __init__.py
src/revive_my_lover/core/: config.py  engine.py  models.py
src/revive_my_lover/info_gain/: __init__.py  core.py
src/revive_my_lover/optimal_stop/: __init__.py  core.py
tests/: __init__.py  test_bayesian.py  test_bayesian_learning.py  test_info_gain.py  test_love.py  test_models.py  test_optimal_stop.py  test_poisson_engine.py
